Bug 1188870: Properly release decoder before destruction. r=snorp

The comment in android's source code is rather explicit:
    // Client MUST call release before releasing final reference to this
    // object.